# mri2mne

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.ar.md  README.en.md  README.es.md  README.hi.md  README.md  README.zh.md  config.example.yaml  environment.yml  pyproject.toml  run_pipeline.py
.github/workflows/: publish.yml  tests.yml
data/: README.en.md  README.md  config.batch.yaml
data/patient01/: patient01_dig.fif
data/patient01/dicom/: N2D_0003.dcm  N2D_0005.dcm  N2D_0008.dcm  N2D_0011.dcm  N2D_0013.dcm  N2D_0014.dcm  N2D_0015.dcm  N2D_0018.dcm  N2D_0020.dcm  N2D_0022.dcm  N2D_0023.dcm  N2D_0025.dcm  N2D_0026.dcm  N2D_0027.dcm  N2D_0029.dcm  N2D_0033.dcm  N2D_0038.dcm  N2D_0039.dcm  N2D_0044.dcm  N2D_0045.dcm  N2D_0047.dcm  N2D_0049.dcm  N2D_0050.dcm  N2D_0051.dcm  N2D_0054.dcm  N2D_0057.dcm  N2D_0059.dcm  N2D_0063.dcm  N2D_0064.dcm  N2D_0065.dcm  N2D_0067.dcm  N2D_0068.dcm  N2D_0070.dcm  N2D_0071.dcm  N2D_0072.dcm  N2D_0074.dcm  N2D_0076.dcm  N2D_0081.dcm  N2D_0086.dcm  N2D_0088.dcm  (+146 more)
data/patient02/dicom/: N2D_0001.dcm  N2D_0002.dcm  N2D_0004.dcm  N2D_0006.dcm  N2D_0007.dcm  N2D_0009.dcm  N2D_0010.dcm  N2D_0012.dcm  N2D_0016.dcm  N2D_0017.dcm  N2D_0019.dcm  N2D_0021.dcm  N2D_0024.dcm  N2D_0028.dcm  N2D_0030.dcm  N2D_0031.dcm  N2D_0032.dcm  N2D_0034.dcm  N2D_0035.dcm  N2D_0036.dcm  N2D_0037.dcm  N2D_0040.dcm  N2D_0041.dcm  N2D_0042.dcm  N2D_0043.dcm  N2D_0046.dcm  N2D_0048.dcm  N2D_0052.dcm  N2D_0053.dcm  N2D_0055.dcm  N2D_0056.dcm  N2D_0058.dcm  N2D_0060.dcm  N2D_0061.dcm  N2D_0062.dcm  N2D_0066.dcm  N2D_0069.dcm  N2D_0073.dcm  N2D_0075.dcm  N2D_0077.dcm  (+158 more)
docs/: CHAT_TRANSCRIPT.md  ENERGY_CARBON_ESTIMATE.md  index.html  transcript_to_md.py
docs/tutorials/: 01_end_to_end.en.html  01_end_to_end.html  02_preprocessed_eeg.en.html  02_preprocessed_eeg.html  03_external_events.en.html  03_external_events.html  04_t1_no_dicom.en.html  04_t1_no_dicom.html  05_volumetric.en.html  05_volumetric.html  build_tutorials.py  index.en.html  index.html  tutorials.css
examples/: open_source_viewer.py  run_full_pipeline_sample.py  run_volumetric_sample.py
src/mri2mne/: __init__.py  _simnibs_fem_helper.py  _simnibs_mesh_helper.py  anonymize.py  batch.py  cli.py  config.py  coregistration.py  dicom_convert.py  eeg.py  freesurfer_bem.py  headmodel.py  inverse.py  logging_utils.py  paths.py  pipeline.py  preflight.py  qc.py  simnibs_forward.py  simnibs_mesh.py  viz.py  volumetric.py  wrapper.py  wsl.py
tests/: test_config.py  test_dicom_convert.py  test_eeg_inverse.py  test_preflight.py  test_viz.py  test_volumetric.py  test_wsl.py
